--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,9 @@
 sudo: required
 language: node_js
 node_js:
-  - "stable"
+  - "iojs"
+  - "7"
 before_install:
   - npm i -g npm@6.5.0
+  - cd databases
 cache: npm
