--- a/databases/package.json
+++ b/databases/package.json
@@ -6,15 +6,18 @@
   "scripts": {
     "test": "mocha",
     "test:watch": "mocha --watch --reporter min",
-    "test:debug":
-    "node --inspect node_modules/mocha/bin/_mocha --watch --no-timeouts"
+    "test:debug": "node --inspect node_modules/mocha/bin/_mocha --watch --no-timeouts",
+    "gulp": "gulp test"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "chai": "3.5.0",
-    "mocha": "2.4.5"
+    "gulp": "^4.0.0",
+    "gulp-shell": "^0.6.5",
+    "mocha": "2.4.5",
+    "shell": "^0.5.0"
   },
   "dependencies": {
     "cheerio": "0.22.0",
