--- a/databases/package.json
+++ b/databases/package.json
@@ -13,7 +13,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "chai": "3.5.0",
+    "chai": "^4.2.0",
     "gulp": "^4.0.0",
     "gulp-shell": "^0.6.5",
     "mocha": "2.4.5",
